Correction z-index

--- a/styles/blocks.less
+++ b/styles/blocks.less
@@ -166,7 +166,6 @@
       height:70px;
       width: 100%;
       .gradient(transparent, white);
-      z-index: 999;
     }
   }
 }
